--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,3 +41,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.ACTIONS_TOKEN }}
+          publish_dir: 6_docs/public
